# DiskTree

./: .env.cmd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  disktree_export.csv  disktree_export.json  phases.txt  progressofprohext.txt  vcpkg.json
.github/workflows/: ci.yml  release.yml
include/disktree/core/: arena.hpp  builder.hpp  index.hpp  models.hpp  scanner.hpp
include/disktree/export/: csv_export.hpp  json_export.hpp
include/disktree/interfaces/tui/: app.hpp
include/disktree/interfaces/web/: server.hpp
include/disktree/utils/: humanize.hpp  progress.hpp  thread_pool.hpp
packaging/scoop/: disktree.json
src/: main.cpp
src/core/: arena.cpp  builder.cpp  index.cpp  scanner.cpp
src/export/: csv_export.cpp  json_export.cpp
src/interfaces/tui/: app.cpp
src/interfaces/web/: server.cpp
src/utils/: humanize.cpp  thread_pool.cpp
tests/: CMakeLists.txt
tests/unit/: test_humanize.cpp
